# persistent-crud

./: cabal.project
persistent-crud-cli/: persistent-crud-cli.cabal
persistent-crud-cli/Database/Persist/: CRUD.hs
persistent-crud-cli/Database/Persist/CRUD/: Options.hs  TH.hs  Types.hs
persistent-crud-cli/test/: SmokeTest.hs
persistent-crud-core/: persistent-crud-core.cabal
persistent-crud-core/Database/Persist/CRUD/: Types.hs
persistent-crud-core/Database/Persist/CRUD/Core/: Stolen.hs  TH.hs
