cabal-version:      2.4
name:               persistent-crud-core
version:            0.1.0.0
synopsis:           TH facilities for creating CRUD interfaces to Persistent databases.
description:
    persistent-crud-core is a base library providing a Template Haskell code
    generator for creating, listing, updating and removing Persistent entity values.
author:             Gleb Popov
maintainer:         6yearold@gmail.com
license:            BSD-3-Clause
category:           Database

library
    exposed-modules:
        Database.Persist.CRUD.Core.Stolen
        Database.Persist.CRUD.Types
        Database.Persist.CRUD.Core.TH
    build-depends:
        base < 5,
        conduit,
        containers,
        mtl,
        optparse-applicative,
        persistent,
        template-haskell,
        text,
        time
    default-extensions:
        LambdaCase
    default-language: Haskell2010
